--- a/index_tester.html
+++ b/index_tester.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <script src="js/jquery-1.9.1.js"></script>
+    <script src="js/functions.js"></script>
     <script src="js/script.js"></script>
     <style>
         /*#container {*/
